force-app/main/default/objects/Animal__c/fields/Adoption_Date__c.field-meta.xml
<CustomField>
    <fullName>Adoption_Date__c</fullName>
    <label>Adoption Date</label>
    <type>Date</type>
</CustomField>