force-app/main/default/objects/Animal__c/fields/Likes__c.field-meta.xml
<CustomField>
    <fullName>Likes__c</fullName>
    <label>Likes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>