force-app/main/default/objects/Animal__c/fields/Photo_Preview__c.field-meta.xml
<CustomField>
    <fullName>Photo_Preview__c</fullName>
    <formula>IMAGE(Photo__c, &quot;Photo&quot;, 200, 200)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Photo Preview</label>
    <type>Text</type>
</CustomField>