force-app/main/default/objects/Animal__c/fields/Species__c.field-meta.xml
<CustomField>
    <fullName>Species__c</fullName>
    <description>Field to track the species of the animal in the shelter</description>
    <inlineHelpText>Please select the species of the animal.</inlineHelpText>
    <label>Species</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dog</fullName>
            </value>
            <value>
                <fullName>Cat</fullName>
            </value>
            <value>
                <fullName>Rabbit</fullName>
            </value>
            <value>
                <fullName>Hamster</fullName>
            </value>
            <value>
                <fullName>Bird</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>